--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,20 +7,48 @@
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
-    <body>
-        <div class="page-header">
-            {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            {% endif %}
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                {% block content %}
-                {% endblock %}
-                </div>
+        <body>
+            <div class="page-header">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                    <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+                    <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+                {% else %}
+                    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+                {% endif %}
+                <h1><a href="/">Django Girls Blog</a></h1>
             </div>
-        </div>
-    </body>
+            <div>
+                {% if user.is_authenticated %}
+                    <div class="content container">
+                        <div class="row">
+                            <div class="col-md-8">
+                            {% block content %}
+                            {% endblock %}
+                            </div>
+                        </div>
+                    </div>
+                {% else %}
+                    <div>
+                        <h1 class=""><a href="{% url 'login' %}">You need to login in order to see the content, Siko bey</a></h1><br/>
+                        <form method="post" action="{% url 'login' %}">
+                        {% csrf_token %}
+                            <table>
+                            <tr>
+                                <td>{{ form.username.label_tag }}</td>
+                                <td>{{ form.username }}</td>
+                            </tr>
+                            <tr>
+                                <td>{{ form.password.label_tag }}</td>
+                                <td>{{ form.password }}</td>
+                            </tr>
+                            </table>
+
+                            <input type="submit" value="login" />
+                            <input type="hidden" name="next" value="{{ next }}" />
+                        </form>
+                    </div>
+                {% endif %}
+            </div>
+        </body>
 </html>
