--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -90,3 +90,9 @@ h1, h2, h3, h4 {
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
+.commentoutside{
+     background: #ffc266 ; border-radius: 10px; margin-top: 20px
+}
+.comment {
+    padding: 8px
+}
