Nobody but logged in users can see the content

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -96,3 +96,12 @@ h1, h2, h3, h4 {
 .comment {
     padding: 8px
 }
+
+.loglazim{
+    padding: 10px 300px;
+}
+
+.logonlazim1{
+
+     background: #ffc266 ; border-radius: 5px; margin: 10px 0 10px -150px; width: 1500px
+}
