--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,6 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div class="logonlazim1">
+<h1 class="loglazim">You need to log in in order to see the content, Siko bey</h1><br/>
+</div>
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
             <table>
